getting rid of UserLogRegistryFactory, it is unncessary indirection